Refactor code / update ignore file / Segue Initialization

--- a/woosh/woosh/Base.lproj/Main.storyboard
+++ b/woosh/woosh/Base.lproj/Main.storyboard
@@ -48,6 +48,7 @@
                                 </state>
                                 <connections>
                                     <action selector="getStartedBtnTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eEP-eD-PYw"/>
+                                    <segue destination="9AA-zh-h31" kind="show" id="wNz-Td-DF6"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hYe-yN-mh2">
@@ -89,15 +90,15 @@ the league</string>
             </objects>
             <point key="canvasLocation" x="116.25" y="117.25352112676056"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="rjZ-GN-YnA">
             <objects>
-                <viewController id="9AA-zh-h31" sceneMemberID="viewController">
+                <viewController id="9AA-zh-h31" customClass="LeagueVC" customModule="woosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ICD-dr-le2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="B46-eW-Jpv">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="B46-eW-Jpv" customClass="Lea">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2rX-gg-kQi">
@@ -154,15 +155,28 @@ the league</string>
                                     </label>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7sE-3H-GN6">
+                                <rect key="frame" x="0.0" y="20" width="29" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="ekY-Mv-YhA"/>
+                                    <constraint firstAttribute="width" constant="29" id="iqL-2o-oX1"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="Ht2-ox-oHa" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="UBt-vX-qeq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="EQO-bc-SQf" firstAttribute="trailing" secondItem="2rX-gg-kQi" secondAttribute="trailing" constant="10" id="07W-hT-kHW"/>
+                            <constraint firstItem="7sE-3H-GN6" firstAttribute="leading" secondItem="EQO-bc-SQf" secondAttribute="leading" id="7NL-Jx-jG9"/>
                             <constraint firstItem="TOy-qo-0r3" firstAttribute="leading" secondItem="EQO-bc-SQf" secondAttribute="leading" constant="10" id="7Nk-J2-Xge"/>
                             <constraint firstItem="B46-eW-Jpv" firstAttribute="bottom" secondItem="EQO-bc-SQf" secondAttribute="bottom" id="EYA-kn-lpw"/>
                             <constraint firstItem="B46-eW-Jpv" firstAttribute="top" secondItem="ICD-dr-le2" secondAttribute="top" id="FHy-MN-XeF"/>
                             <constraint firstItem="TOy-qo-0r3" firstAttribute="centerX" secondItem="ICD-dr-le2" secondAttribute="centerX" id="IQA-He-MuW"/>
                             <constraint firstItem="2rX-gg-kQi" firstAttribute="centerX" secondItem="ICD-dr-le2" secondAttribute="centerX" id="KcO-9b-h6d"/>
+                            <constraint firstItem="7sE-3H-GN6" firstAttribute="top" secondItem="EQO-bc-SQf" secondAttribute="top" id="ON4-0W-UVE"/>
                             <constraint firstItem="2rX-gg-kQi" firstAttribute="leading" secondItem="EQO-bc-SQf" secondAttribute="leading" constant="10" id="OS1-4t-Bg9"/>
                             <constraint firstItem="EQO-bc-SQf" firstAttribute="trailing" secondItem="TOy-qo-0r3" secondAttribute="trailing" constant="10" id="QhA-V6-wtV"/>
                             <constraint firstItem="2rX-gg-kQi" firstAttribute="top" secondItem="U2U-LX-VGr" secondAttribute="bottom" constant="50" id="Vx3-IN-FCd"/>
@@ -176,13 +190,14 @@ the league</string>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tdW-MA-Vv1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Ht2-ox-oHa" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="948.75" y="117.25352112676056"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="pbv-Zb-usd">
             <objects>
-                <viewController id="Psg-kT-xWB" sceneMemberID="viewController">
+                <viewController id="Psg-kT-xWB" customClass="SkillVC" customModule="woosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oKs-fm-Kd6">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -259,6 +274,7 @@ the league</string>
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
